--- a/app/templates/deploy/release.conf
+++ b/app/templates/deploy/release.conf
@@ -1,4 +1,4 @@
-# 打包配置文件
+﻿# 打包配置文件
 # × 每行第一个非空字符为“#”则表示该行为注释
 # × 配置参数使用 KEY = VALUE 格式
 # × 配置参数为路径的，如果是相对路径则必须以“./”、“../”开始
@@ -22,7 +22,7 @@ DIR_OUTPUT_TP     = ./WEB-INF/tpl/
 # 静态资源路径，默认为WEB根路径下的res目录
 #DIR_STATIC        = ./res/images/
 # NEJ框架本地路径，此配置优先级高于自动识别
-#NEJ_DIR           = ../src/nej/
+#NEJ_DIR           = ../src/3rd/nej/
 
 # 输出文件配置
 # 输出文件名后缀，配置了后缀的情况下对所有输出文件的请求都不会带版本号，默认带版本号
