--- a/app/templates/deploy/release_t.conf
+++ b/app/templates/deploy/release_t.conf
@@ -16,7 +16,7 @@ DIR_OUTPUT        = ./pub/
 DIR_OUTPUT_STATIC = ./r/
 # 项目服务器端模板文件根路径
 # 服务器端模板文件确保页面所需的CSS、JS文件的引用均出现在模板文件中
-#DIR_SOURCE_TP     = ./WEB-INF/template/
+DIR_SOURCE_TP     = ./WEB-INF/template/
 # 项目服务器端模板输出路径，默认为DIR_SOURCE_TP配置信息
 DIR_OUTPUT_TP     = ./WEB-INF/tpl/
 # 静态资源路径，默认为WEB根路径下的res目录
