--- a/app/templates/deploy/release.conf
+++ b/app/templates/deploy/release.conf
@@ -16,13 +16,13 @@ DIR_OUTPUT        = ./pub/
 DIR_OUTPUT_STATIC = ./r/
 # 项目服务器端模板文件根路径
 # 服务器端模板文件确保页面所需的CSS、JS文件的引用均出现在模板文件中
-#DIR_SOURCE_TP     = ./WEB-INF/template/
+#DIR_SOURCE_TP     = ./WEB-INF/template/pages/
 # 项目服务器端模板输出路径，默认为DIR_SOURCE_TP配置信息
-DIR_OUTPUT_TP     = ./WEB-INF/tpl/
+#DIR_OUTPUT_TP     = ./WEB-INF/tpl/pages/
 # 静态资源路径，默认为WEB根路径下的res目录
 DIR_STATIC        = ./res/images/
 # NEJ框架本地路径，此配置优先级高于自动识别
-NEJ_DIR           = ../src/3rd/nej/src/
+NEJ_DIR           = ./src/javascript/lib/nej/src/
 
 # 输出文件配置
 # 输出文件名后缀，配置了后缀的情况下对所有输出文件的请求都不会带版本号，默认带版本号
@@ -47,13 +47,13 @@ NEJ_DIR           = ../src/3rd/nej/src/
 # 1 - 只混淆单个下划线(_)前缀的变量，如_xxx
 # 2 - 在1的基础上增加两个下划线(__)前缀的变量，如_xxx、__xxx
 # 3 - 所有下滑线前缀的变量都做混淆【默认配置】，如_xxx、__xxx、_$xxx、_$$xxx
-#OBF_LEVEL     = 3
+OBF_LEVEL     = 3
 # 压缩分行模式
 # 0 - 所有文件合并成一行
 # 1 - 一个文件一行【默认配置】
 #OBF_LINE_MODE = 1
 # 脚本混淆变量名称对照表文件路径，如果是相对路径则相对于当前配置文件路径
-#OBF_NAME_BAGS = ./names.txt
+OBF_NAME_BAGS = ./names.txt
 # 内联样式内容的最大长度（单位K），默认为50K，如超出该长度则将样式做为外联文件导入
 #OBF_MAX_CS_INLINE_SIZE = 0
 # 内联脚本内容的最大长度（单位K），默认为0K，即使用外联文件导入
