--- a/app/templates/deploy/release_t.conf
+++ b/app/templates/deploy/release_t.conf
@@ -16,13 +16,13 @@ DIR_OUTPUT        = ./pub/
 DIR_OUTPUT_STATIC = ./r/
 # 项目服务器端模板文件根路径
 # 服务器端模板文件确保页面所需的CSS、JS文件的引用均出现在模板文件中
-DIR_SOURCE_TP     = ./WEB-INF/template/
+DIR_SOURCE_TP     = ./WEB-INF/template/pages/
 # 项目服务器端模板输出路径，默认为DIR_SOURCE_TP配置信息
-DIR_OUTPUT_TP     = ./WEB-INF/tpl/
+DIR_OUTPUT_TP     = ./WEB-INF/tpl/pages/
 # 静态资源路径，默认为WEB根路径下的res目录
 DIR_STATIC        = ./res/images/
 # NEJ框架本地路径，此配置优先级高于自动识别
-NEJ_DIR           = ../src/3rd/nej/src/
+NEJ_DIR           = ../src/javascript/lib/nej/src/
 
 # 输出文件配置
 # 输出文件名后缀，配置了后缀的情况下对所有输出文件的请求都不会带版本号，默认带版本号
