--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
     "name": "generator-fedtpl",
-    "version": "0.0.12",
+    "version": "0.0.28",
     "description": "Yeoman generator",
     "license": "MIT",
     "main": "app/index.js",
+    "bin": {
+        "fedtpl": "./bin/fedtpl",
+		"run": "./bin/run"
+    },
     "repository": "force2008/generator-fedtpl",
     "author": {
         "name": "yuqijun",
@@ -13,16 +17,13 @@
     "engines": {
         "node": ">=0.10.0"
     },
-    "bin": {
-        "fedtpl": "./bin/fedtpl.js"
-    },
     "scripts": {
         "test": "mocha"
     },
     "files": [
         "app",
-        "freemaker",
-        "single"
+        "freemarker",
+        "bin"
     ],
     "keywords": [
         "yeoman-generator"
@@ -30,7 +31,8 @@
     "dependencies": {
         "yeoman-generator": "~0.16.0",
         "chalk": "~0.4.0",
-        "yosay": "^0.1.0"
+        "yosay": "^0.1.0",
+		"commander": "~2.3.0"
     },
     "devDependencies": {
         "mocha": "*"
