support command withou yo

--- a/app/templates/deploy/release.conf
+++ b/app/templates/deploy/release.conf
@@ -58,3 +58,5 @@ OBF_NAME_BAGS = ./names.txt
 #OBF_MAX_CS_INLINE_SIZE = 0
 # 内联脚本内容的最大长度（单位K），默认为0K，即使用外联文件导入
 #OBF_MAX_JS_INLINE_SIZE = 0
+#不处理内联脚本，如script标签之间的内容
+X_NOPARSE_FLAG = 2
