--- a/app/templates/deploy/release.conf
+++ b/app/templates/deploy/release.conf
@@ -1,4 +1,7 @@
-﻿# 打包配置文件
+﻿
+# 打包配置详细配置
+# https://github.com/genify/toolkit/blob/master/template/config/release.conf# 打包配置文件
+# 打包配置文件
 # × 每行第一个非空字符为“#”则表示该行为注释
 # × 配置参数使用 KEY = VALUE 格式
 # × 配置参数为路径的，如果是相对路径则必须以“./”、“../”开始
@@ -20,8 +23,10 @@ DIR_OUTPUT_STATIC = ./r/
 # 项目服务器端模板输出路径，默认为DIR_SOURCE_TP配置信息
 #DIR_OUTPUT_TP     = ./WEB-INF/tpl/pages/
 # 静态资源路径，默认为WEB根路径下的res目录
-DIR_STATIC        = ./res/images/
+DIR_STATIC        = ./res/
+
 # NEJ框架本地路径，此配置优先级高于自动识别
+# 如果项目文件既有使用NEJ依赖的页面也有使用nodep的页面时必须配置此参数
 NEJ_DIR           = ./src/javascript/lib/nej/src/
 
 # 输出文件配置
@@ -41,22 +46,25 @@ NEJ_DIR           = ./src/javascript/lib/nej/src/
 # 外联脚本请求域名，没有配置则使用DM_STATIC配置信息
 #DM_STATIC_JS = b2.bst.126.net
 
-# 混淆压缩配置
+# 输入文件后缀匹配规则，多个后缀用“|”分隔，忽略大小写，默认取所有文件
+FILE_SUFFIXE   = ftl|html
+# 静态资源加版本号
+STATIC_VERSION = true
+# 内联页面脚本
+OBF_MAX_JS_INLINE_SIZE = 100
 # 脚本混淆等级
-# 0 - 不做混淆，只做压缩
-# 1 - 只混淆单个下划线(_)前缀的变量，如_xxx
-# 2 - 在1的基础上增加两个下划线(__)前缀的变量，如_xxx、__xxx
-# 3 - 所有下滑线前缀的变量都做混淆【默认配置】，如_xxx、__xxx、_$xxx、_$$xxx
-OBF_LEVEL     = 3
-# 压缩分行模式
-# 0 - 所有文件合并成一行
-# 1 - 一个文件一行【默认配置】
-#OBF_LINE_MODE = 1
-# 脚本混淆变量名称对照表文件路径，如果是相对路径则相对于当前配置文件路径
-OBF_NAME_BAGS = ./names.txt
-# 内联样式内容的最大长度（单位K），默认为50K，如超出该长度则将样式做为外联文件导入
-#OBF_MAX_CS_INLINE_SIZE = 0
-# 内联脚本内容的最大长度（单位K），默认为0K，即使用外联文件导入
-#OBF_MAX_JS_INLINE_SIZE = 0
-#不处理内联脚本，如script标签之间的内容
-X_NOPARSE_FLAG = 2
+OBF_LEVEL = 0
+# 不输出NEJ/nej名字空间
+OBF_COMPATIBLE = false
+# 是否输出Source Map信息
+OBF_SOURCE_MAP = true
+# 静态资源域名配置
+DM_STATIC      = /
+#不处理内联样式/脚本，如style/script标签之间的内容
+X_NOPARSE_FLAG = 3
+# 输出文件不做压缩
+X_NOCOMPRESS   = true
+# 别名配置表
+ALIAS_DICTIONARY = {"jspro":"/src/javascript/","jslib":"/src/javascript/lib/nej/src/"}
+# CSS Core文件列表配置文件
+CORE_LIST_CS     = ["/src/css/base.css","/src/css/grid.css","/src/css/module.css","/src/css/unit.css"]
